--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.6",
     "@react-buddy/ide-toolbox": "^2.2.0",
     "@react-buddy/palette-mui": "^1.2.2",
     "@testing-library/jest-dom": "^5.16.4",
