--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.4",
+    "plotly.js": "^2.14.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-pivot": "^4.4.0",
+    "react-pivottable": "^0.11.0",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-validation": "^3.0.7",
+    "react-webdatarocks": "^1.4.6",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
